--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
+  <link rel="stylesheet" href="\assets\css\bootstrap.min.css" >
 
 </head>
 <body>
   <app-root></app-root>
-  <script src="assets/jquery-3.2.1.slim.min.js" ></script>
-  <script src="assets/popper.js/1.12.9/umd/popper.min.js" ></script>
-  <script src="assets/bootstrap.min.js" ></script>
+  <script src="\assets\js\bootstrap.min.js" ></script>
+  <script src="\assets\js\popper.min.js" ></script>
+  <script src="\assets\js\jquery-3.2.1.slim.min.js" ></script>
 </body>
 </html>
